# stego-playground

./: .gitignore  CMakeLists.txt  README.md
include/: bititerator.h  compression.h  pngstego.h
lib/: bititerator.cpp  compression.cpp  pngstego.cpp
src/: decoder.cpp  encoder.cpp
testdata/: README.md
